force-app/main/default/objects/Survey_Response__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Notes provided about the score given</description>
    <label>Notes</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>