force-app/main/default/objects/Survey_Response__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <description>The Question asked to the survey recipient</description>
    <label>Question</label>
    <length>255</length>
    <type>Text</type>
</CustomField>