force-app/main/default/objects/Survey_Response__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>The score given by the survey respondent</description>
    <label>Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>