force-app/main/default/objects/Survey_Response__c/fields/Score_Percent__c.field-meta.xml
<CustomField>
    <fullName>Score_Percent__c</fullName>
    <formula>CASE(Answer__c,
					&apos;Excellent&apos;,1,
					&apos;Good&apos;,0.67,
					&apos;Fair&apos;,0.34,
					&apos;Poor&apos;,0,
					&apos;Exceeded expectations&apos;,1,
					&apos;Met expectations&apos;,0.67,
					&apos;Somewhat met expectations&apos;,0.34,
					&apos;Did not meet expectations&apos;,0,
					&apos;Yes, it was very easy&apos;,1,
					&apos;It was okay, but could be improved&apos;,0.5,
					&apos;No, it was difficult&apos;,0,
					&apos;Definitely&apos;,1,
					&apos;Maybe&apos;,0.5,
					&apos;No&apos;,0,
					&apos;&apos;,1,
					0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>